test/yaml/testdata/output/ratelimit/multiple-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: eg
  listeners:
  - hostname: example.com
    name: example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ratelimit-ingress1-example-com
  namespace: namespace1
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: service-ingress1
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /api
    name: rule-0-prefix-api
  - backendRefs:
    - name: service-ingress1
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /admin
    name: rule-1-prefix-admin
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-ingress1-example-com-0
  namespace: namespace1
spec:
  rateLimit:
    local:
      rules:
      - clientSelectors:
        - sourceCIDR:
            type: Distinct
            value: 0.0.0.0/0
        limit:
          requests: 10
          unit: Second
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: ratelimit-ingress1-example-com
    sectionName: rule-0-prefix-api
status:
  ancestors: null
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-ingress1-example-com-1
  namespace: namespace1
spec:
  rateLimit:
    local:
      rules:
      - clientSelectors:
        - sourceCIDR:
            type: Distinct
            value: 0.0.0.0/0
        limit:
          requests: 600
          unit: Minute
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: ratelimit-ingress1-example-com
    sectionName: rule-1-prefix-admin
status:
  ancestors: null
